# SonataEngine

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json
cmake/: CompilerWarnings.cmake  DefaultProjectSettings.cmake  Sanitizers.cmake  StaticAnalyzers.cmake
engine/: CMakeLists.txt
engine/src/: test.cpp  test.h
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp  sandbox.cpp  sandbox.h  sandbox.hpp  sandbox_2d.cpp  sandbox_2d.hpp
sonata/: CMakeLists.txt
sonata/src/: application.cpp  application.h  application.hpp  core.hpp  entry_point.h  entry_point.hpp  glm_wrapper.hpp  imgui_wrapper.hpp  input.hpp  log.cpp  log.h  log.hpp  sonata.h  sonata.hpp  test.cpp  test.h  window.cpp  window.h  window.hpp
sonata/src/core/: application.cpp  application.hpp  entry_point.hpp  input.cpp  input.hpp  input_codes.hpp  timestep.cpp  timestep.hpp  window.cpp  window.hpp
sonata/src/events/: app_event.hpp  event.h  event.hpp  key_event.hpp  mouse_event.hpp
sonata/src/layers/: imgui_layer.cpp  imgui_layer.hpp  layer.cpp  layer.hpp  layer_stack.cpp  layer_stack.hpp
sonata/src/logger/: log.cpp  log.hpp
sonata/src/profiler/: instrumentor.cpp  instrumentor.hpp
sonata/src/rendering/: buffer.cpp  buffer.hpp  orthographic_camera.cpp  orthographic_camera.hpp  orthographic_camera_controller.cpp  orthographic_camera_controller.hpp  render_command.cpp  render_command.hpp  render_context.cpp  render_context.hpp  renderer.cpp  renderer.hpp  renderer_2d.cpp  renderer_2d.hpp  renderer_api.cpp  renderer_api.hpp  shader.cpp  shader.hpp  sub_texture_2d.cpp  sub_texture_2d.hpp  texture.cpp  texture.hpp  vertex_array.cpp  vertex_array.hpp
sonata/src/rendering/opengl/: opengl_buffer.cpp  opengl_buffer.hpp  opengl_context.cpp  opengl_context.hpp  opengl_renderer_api.cpp  opengl_renderer_api.hpp  opengl_shader.cpp  opengl_shader.hpp  opengl_texture2d.cpp  opengl_texture2d.hpp  opengl_vertexarray.cpp  opengl_vertexarray.hpp
sonata/src/rendering/vulkan/: vulkan_context.cpp  vulkan_context.hpp
